# rust_rpc_api

./: Cargo.toml
proto/: users.proto
src/: client.rs  server.rs
